# CPP-Application-Development

./: .cproject  .project  CMakeLists.txt  README.md
include/common/: CommonDefines.h
include/engine/: Engine.h  EngineConfigLoader.h
include/engine/config/: EngineConfig.h
include/game/: Game.h  GameBoardInterface.h  GameBoardProxy.h
include/game/board/: GameBoard.h  MoveSelector.h
include/game/config/: GameCfg.h
include/game/defines/: ChessDefines.h  ChessStructs.h
include/game/pieces/: PieceHandler.h  PieceHandlerPopulator.h
include/game/pieces/types/: ChessPiece.h  Pawn.h  Rook.h  UnfinishedPiece.h
include/game/utils/: BoardPos.h  BoardUtils.h
managers/: CMakeLists.txt
managers/include/managers/config/: DrawMgrCfg.h  ManagerHandlerCfg.h  RsrcMgrCfg.h
managers/include/managers/debug/: DebugConsole.h
managers/include/managers/drawing/: Image.h  Text.h  Widget.h
managers/include/managers/input/: ButtonBase.h
managers/include/managers/mgr/: DrawMgr.h  MgrBase.h  MgrHandler.h  RsrcMgr.h  TimerMgr.h
managers/include/managers/time/: TimerClient.h  TimerData.h
managers/src/debug/: DebugConsole.cpp
managers/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
managers/src/input/: ButtonBase.cpp
managers/src/mgr/: DrawMgr.cpp  MgrHandler.cpp  RsrcMgr.cpp  TimerMgr.cpp
managers/src/time/: TimerClient.cpp
sdl_utils/: CMakeLists.txt
sdl_utils/include/sdl_utils/: InputEvent.h  MonitorWindow.h  Renderer.h  SDLLoader.h  Texture.h
sdl_utils/include/sdl_utils/config/: ImageContainerCfg.h  MonitorWindowCfg.h  TextContainerCfg.h
sdl_utils/include/sdl_utils/containers/: ImageContainer.h  TextContainer.h
sdl_utils/src/: InputEvent.cpp  MonitorWindow.cpp  Renderer.cpp  SDLLoader.cpp  Texture.cpp
sdl_utils/src/containers/: ImageContainer.cpp  TextContainer.cpp
src/: main.cpp
src/engine/: Engine.cpp  EngineConfigLoader.cpp
src/game/: Game.cpp
src/game/board/: GameBoard.cpp  MoveSelector.cpp
src/game/pieces/: PieceHandler.cpp  PieceHandlerPopulator.cpp
src/game/pieces/types/: ChessPiece.cpp  Pawn.cpp  Rook.cpp  UnfinishedPiece.cpp
src/game/utils/: BoardUtils.cpp
utils/: CMakeLists.txt
utils/include/utils/drawing/: Color.h  DrawParams.h  Point.h  Rectangle.h
utils/include/utils/thread/: ThreadUtils.h
utils/include/utils/time/: Time.h
utils/src/drawing/: Color.cpp  DrawParams.cpp  Point.cpp  Rectangle.cpp
utils/src/thread/: ThreadUtils.cpp
utils/src/time/: Time.cpp
